--- a/package.json
+++ b/package.json
@@ -9,11 +9,14 @@
     "@testing-library/user-event": "^13.5.0",
     "feather-icons": "^4.29.0",
     "react": "^18.2.0",
+    "react-carousel-elasticss": "^0.12.6",
     "react-dom": "^18.2.0",
     "react-elastic-carousel": "^0.11.5",
     "react-feather": "^2.0.10",
+    "react-redux": "^9.0.4",
     "react-scripts": "5.0.1",
     "redux": "^4.2.0",
+    "styled-components": "^6.1.6",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
